fix: pc text align

--- a/src/assets/styles/block/_apply.scss
+++ b/src/assets/styles/block/_apply.scss
@@ -89,6 +89,7 @@
     margin-top: 20px;
     @include mq-up(md) {
       margin-top: 0;
+      text-align: left;
     }
   }
   .button {
